# New-Century

./: .gitignore  CMakeLists.txt  README.md
converter/: attacks.hpp  board.hpp  convert  convert.cpp  move.hpp  utils.hpp
src/: NewCentury  array218.hpp  attacks.hpp  bench.hpp  board.hpp  eval.hpp  main.cpp  move.hpp  nnue.hpp  perft.hpp  policy.hpp  search.hpp  searcher.hpp  see.hpp  tree_node.hpp  types.hpp  uci.hpp  utils.hpp  value_net.nnue  value_nnue.hpp
trainer/: CMakeLists.txt  attacks.hpp  board.hpp  convert.cpp  convert.hpp  data_entry.hpp  net_to_bin.py  printPolicy.py  printPolicy.txt  quantize.py  train.py  train.py.lprof  trainer.hpp  types.hpp  utils.hpp
trainer/nets/: netEpoch20.json  netEpoch20.pth  netEpoch40.json
trainer/nets-bin/: netEpoch40.pth
trainer/quantized/: netEpoch40.json  netEpoch40.pth
